# GenerateUnitTestCases

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  generate_tests.py  main.py  pyproject.toml  requirements.txt  temp  temp.py
Error/: test_circle_utils.py  test_config.py  test_llm_utils.py  test_models.py
final/: test_circle_utils.py  test_config.py  test_llm_handler.py  test_llm_utils.py  test_main.py  test_models.py  test_utils.py
scripts/: quick-commit.sh
src/: circle_utils.py  factorial.py  fizzbuzz.py  math_utils.py  rect_utils.py  triangle_utils.py
temp/: temp.py  test_math_utils.py
test/: test_circle_utils.py  test_config.py
tests/: test_circle_utils.py  test_factorial.py  test_fizzbuzz.py  test_general_qa.py  test_llm_utils.py  test_main.py  test_math_utils.py  test_rect_utils.py  test_triangle_utils.py  test_utils.py
tests/evaluator/: test_general_qa.py
theory_evaluation/: __init__.py  llm_utils.py  main.py  math_utils.py  utils.py
theory_evaluation - Copy/: circle_utils.py  config.py  llm_handler.py  models.py  requirements.txt
theory_evaluation - Copy/evaluator/: __init__.py
theory_evaluation - Copy/evaluator/prompts/evaluation/: config.yaml  llm_settings.yaml  prompt.txt
theory_evaluation/evaluator/: general_qa.py
