[project]
name = "generateunittestcases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.40",
]
