[project]
name = "generateunittestcases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "openai>=1.72.0",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pylance>=0.25.2",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.40",
]
